kbd-chooser (0.30) UNRELEASED; urgency=low

  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Safir Secerovic, Amila Akagic
    - Add Bosnian translatio (bs.po).
  * Chritian Perrier 
    - Update French translation.

 -- Andre Luis Lopes <andrelop@debian.org>  Sat,  1 Nov 2003 16:27:01 -0200

kbd-chooser (0.29) unstable; urgency=low

  * Alastair McKinstry
    - Pick which keyboards to use for m68k, powerpc using archdetect.
      Closes: #213319.
    - Keyboard names now properly translatable. Closes: #215212.
    - Update Irish translation (ga.po).
  * Bart Cornelis
    - updated dutch translation (nl.po)
  * Christian Perrier
    - Update French translation.
  * Kęstutis Biliūnas
    - Add Lithuanian translation (lt.po).
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Claus Hindsgaul
    - Add da.po (Danish) translation.
  * Miroslav Kure
    - Update Czech translation (cs.po).
  * Petter Reinholdtsen
    - Updated nb.po.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Tommi Vainikainen
    - Add Finnish (fi.po) translation
  * Carlos Valdivia Yagüe
    - Update Spanish translation (es.po).
  * Bart Cornelis
    - update dutch translation (nl.po)

 -- Bart Cornelis <cobaco@linux.be>  Sat,  1 Nov 2003 13:25:47 +0100

kbd-chooser (0.28) unstable; urgency=low

  * Alastair McKinstry
    - Fixed bad cut-n-paste code bug in atari-kbd.c
    - Depend on libdebconfclient0-dev > 0.47, to get fixed version of
      cdebcon_capb() macro.

 -- Sebastian Ley <ley@debian.org>  Tue, 14 Oct 2003 12:14:49 +0200

kbd-chooser (0.27) unstable; urgency=low

  * Richard Hirst
    - Enable at and usb keyboards on ia64
  * Petter Reinholdtsen
    - Get 'make demo' working.
  * Jordi Mallach
    - Added Catalan (ca) translation.
  * Kenshi Muto
    - Update ja.po
  * Alastair McKinstry
    - Fix broken UTF-8 in changelog
    - Move to Standards-Version: 3.6.1; no changes required.