@@ -6,6 +6,10 @@ kbd-chooser (0.30) UNRELEASED; urgency=low
     - Add Bosnian translatio (bs.po).
   * Chritian Perrier 
     - Update French translation.
+  * Alastair McKinstry
+    - Ifdef some macros that should be in cdebconf, libd-i.
+    - On GOBACK, quit with exit 0, not 30; its not an error, and main-menu
+      shouldn't lower the priority.
 
  -- Andre Luis Lopes <andrelop@debian.org>  Sat,  1 Nov 2003 16:27:01 -0200
 
